[tool.poetry]
name = "digimon"
version = "0.1.0"
description = ""
authors = ["Thanathip Limna <boatkrap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
pg8000 = "^1.31.2"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
