[tool.poetry]
name = "digimon"
version = "0.1.0"
description = ""
authors = ["Thanathip Limna <boatkrap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
pg8000 = "^1.31.2"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.29.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
locust = "^2.31.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
